updated apply and completed pages. Default page has link to jobs page.

--- a/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Apply.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Apply.cshtml
@@ -25,7 +25,12 @@
     Submit an application to Teen Jobs.
 </p>
 <form action="" method="post">
-    <p>Name: <input type="text" name="inputName" /></p>
+    <div>
+        <div>Name:</div>
+        <div><input type="text" name="inputName" /></div>
+    </div>
+    
+    <p>Name: </p>
     <p>Address: <input type="text" name="inputAddress" /></p>
     <p>City State Zip: <input type="text" name="inputCityStateZip" /></p>
     <p>Home Phone: <input type="text" name="inputHomePhone" /></p>
