--- a/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Completed.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Completed.cshtml
@@ -1,11 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{  
+    Layout = "~/_SiteLayout.cshtml";
+    Page.Title = "Teen Jobs - Thanks for submitting an application at Teen Jobs";
+}
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        
-    </body>
-</html>
+<p>Thank you for submitting an application.</p>
+<a href="@Href("~/Jobs/Jobs")">Click here to go back to the jobs page.</a>
