--- a/GiveCamp 2011 Jan/TeenJob1/Default.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/Default.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/_SiteLayout.cshtml";
     Page.Title = "Welcome to Teen Jobs";
 }
-<p>
-    This is my home page.
-</p>
+<div>
+    <p>Welcome to Teen Jobs!</p>
+    <p><a href="@Href("~/Jobs/Jobs")">Browse current job listings.</a></p>
+</div>
