added ViewJob and beginning of DAL.

--- a/GiveCamp 2011 Jan/TeenJob1/Jobs/Jobs.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/Jobs/Jobs.cshtml
@@ -13,7 +13,7 @@
     <ul>
         @foreach(var row in data)
         {
-            <li><a href="#">@row.JobTitle</a></li>
+            <li><a href="ViewJob.cshtml?id=@row.JobID">@row.JobTitle</a></li>
         }
     </ul>
     <a href="AddJob.cshtml">Add Job</a>
