--- a/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Completed.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/TeenApplication/Completed.cshtml
@@ -3,5 +3,5 @@
     Page.Title = "Teen Jobs - Thanks for submitting an application at Teen Jobs";
 }
 
-<p>Thank you for submitting an application.</p>
+<p>Thanks for submitting an application.</p>
 <a href="@Href("~/Jobs/Jobs")">Click here to go back to the jobs page.</a>
