updated about page. copied content from existing site.

--- a/GiveCamp 2011 Jan/TeenJob1/About.cshtml
+++ b/GiveCamp 2011 Jan/TeenJob1/About.cshtml
@@ -4,4 +4,76 @@
 }
 <p>
     Boys &amp; Girls Club of Seattle.
-</p>
+    
+  <div id="content">
+  <h1>About YouthForce  </h1>
+
+  <p> </p> 
+  <div id="h4a">Mission Statement </div>
+  <p>YouthForce programs develop
+	low income and minority youth into independent learners, able to realize their personal and professional goals.</p>
+  <p>&nbsp;</p>
+  <div id="h4a">Vision </div>
+  <p style="margin-bottom: 0">That all youth have the support needed to achieve their  dreams and greatest potential. </p>
+  <p>&nbsp;</p>
+
+  <div id="h4a" style="margin-bottom: 0">YouthForce Program Descriptions</div>
+  <p><font face="Arial"><span style="font-size:11.0pt">YouthForce is a 10 year old Seattle area 501(c)(3) non-profit organization.</span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">YouthForce's <b><i>Career Internship Program</i></b> has provided <font face="Arial"><span style="font-size:11.0pt">over 300  low income and minority teens with </span></font>more than  100,00 hours of paid, career-focused internship experience. </span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">Our Career Internships provide long term after school and summer internships in professional companies, developing teens professional networks, career experience, mentors and role models. </span></font></p>
+
+  <p><font face="Arial"><span style="font-size:11.0pt">Our 2008 Career Internship partners include </span><i> <span style="font-size: 11.0pt">ZymoGenetics Inc., </span> <span style="font-size: 11.0pt">Expeditors International, Microsoft,</span></i> <span style="font-size:11.0pt"><i>Amazon.com, Stoel Rives, Popcap Games, Coughlin Porter Lundeen, Flow Corp., the Experience Music Project </i>and other sector leaders. </span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">92% percent of our interns have met or exceeded the performance, academic and commitment goals established by themselves, their intern site, and YouthForce.</span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">Since 2006, our <b><i>Leadership Internship Program, </i></b> has provided over 60 teens with advanced skills organizing and running the TeamWork Internship Program and supporting the operation of YouthForce as business leaders, peer counselors, researchers and webmasters.&nbsp; </span></font></p>
+
+  <p><font face="Arial"><span style="font-size:11.0pt">Our <b><i>TeamWork Internship Program</i>, </b><font face="Arial"><span style="font-size:11.0pt">hosted by First and Goal Inc. and the Seattle Seahawks,</span></font> has provided over 250 low income teens with more than 12,000 hours of mentored employment. TeamWork Internships cultivate the communication, teamwork, personal responsbility and customer service skills essential in school and life, and prepares teens for our more intensive Leadership and Career Internships. </span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">Teamwork interns also participate in monthly trainings provided by the UW Dream Project and Ashoka's Youth Ventures - providing college prep assistance, entrepreneurship and service learning guidance </span></font></p>
+  <p><font face="Arial"><span style="font-size:11.0pt">Our <b><i> Inspirational Interview Series</i> </b>offers small groups of teens the chance meet with community leaders within their career interests.&nbsp;Personal conversations allow teens to learn how others have overcome obstacles, developed their goals, and achieved their success. &nbsp;</span></font></p>
+
+  <p><font face="Arial"><span style="font-size:11.0pt"> Local leaders interviewed include<i> <font face="Arial"><span style="font-size:11.0pt"><i>Governor Gary Locke, Costco Wholesale Chairman </i></span></font> and co-Founder, Jeffrey Brotman, Starbucks Chairman Howard Schultz, Expeditors International CEO Peter Rose</i> and many others.</span></font></p>
+  <div id="h4a">Guiding Philosophy </div>
+  <p>YouthForce believes that all youth have great potential.&nbsp; The power of YouthForce rests in our ability to connect the critical players in the youth employment challenge &ndash; students, parents, high schools, youth programs and employers &ndash;to accomplish what none can do alone. </p>
+
+  <p>By engaging schools, business and teens, YouthForce provides teens with: </p>
+  <ul>
+    <li class="style3">t<span class="style4">he coaching they need to develop a history of academic and extracurricular achievement, </span></li>
+    <li class="style4">role models and mentors to build personal and professional networks, </li>
+    <li class="style4">career education to explore interests and opportunities, </li>
+    <li class="style4">income to support college and family finances, and </li>
+
+    <li class="style4">relevant internships that motivate their talent and dreams without limits.&nbsp;</li>
+  </ul>
+  <p>For low income and minority teens whose opportunities are often limited   by factors such as poverty, lack of role models, or networks,   YouthForce&rsquo;s internships demonstrate that their   dreams are achievable, that adults care about them, and that <em>they</em> hold the power to succeed in any path they choose.&nbsp;&nbsp;&nbsp; &nbsp;</p>
+  <div id="h4a">Business Strategy</div>
+  	<p>YouthForce is a social entrepreneurial staffing service providing businesses a high value, low cost solution to the routine office and clerical needs that accumulate during the day.  Our private-sector recruiting, screening and payroll services remove the performance and liability concerns associated with youth employment.  Our proven sequence of goal setting, coaching, leadership trainings and recruiting talent result in risk free, productive, inspiring and employable teens who can perform any routine office duty to allow staff to focus on their high productivity work.  For high achieving low income teens without social networks, these professional work experiences provide a way out of the service economy into career relevant jobs that offer experience and role models they need to achieve their greatest ambition and potential. </p>
+
+  	<p>Teens       serve internships with some of the most innovative and successful       employers across a wide range of professional fields in the Seattle area,       including ZymoGenetics 
+	Inc.,
+      <!--  D(["mb","<a href\u003d\"http://Amazon.com\" target\u003d\"_blank\" onclick\u003d\"return top.js.OpenExtLink(window,event,this)\"><font size\u003d\"2\" face\u003d\"Arial\"><span style\u003d\"font-size:10.5pt;font-family:Arial\">Amazon.com</span></font></a>,\n     Qwest Field, Expeditors International, PopCap Games, Stoel Rives LLC, Wong\n     Doody, Coughlin Porter Lundeen, Helsell Fetterman and many others.</span></font><font size\u003d\"2\" face\u003d\"Arial\"><span style\u003d\"font-size:10.5pt;font-family:Arial\"></span></font></li>\n <li style\u003d\"color:#333333\"><u><font size\u003d\"3\" color\u003d\"black\" face\u003d\"Times New Roman\"><span style\u003d\"font-size:12.0pt;color:windowtext\">Community\n     Services Bar &nbsp;</span></font></u><font color\u003d\"black\"><span style\u003d\"color:windowtext\">Replace &nbsp;&nbsp;employers enjoy the benefits\n     of having motivated, enthusiastic teens working in administrative support\n     positions while receiving they are receiving the goodwill associated with\n     giving back to the community;&nbsp; with&nbsp; employers enjoy the\n     benefits of having motivated, enthusiastic teens working in administrative\n     support positions while receiving the goodwill associated with giving back\n     to the community</span></font><font size\u003d\"2\" face\u003d\"Arial\"><span style\u003d\"font-size:10.5pt;font-family:Arial\"></span></font></li>\n <li style\u003d\"color:#333333\"><font size\u003d\"2\" color\u003d\"black\" face\u003d\"Times New Roman\"><span style\u003d\"font-size:10.0pt;color:windowtext\">Management\n     Team Bar&nbsp; </span></font>It&rsquo;s fine &ndash; although if you want\n     to add me, let me know and I&rsquo;ll send you some text<font size\u003d\"2\" face\u003d\"Arial\"><span style\u003d\"font-size:10.5pt;font-family:Arial\"></span></font></li>\n <li style\u003d\"color:#333333\"><font size\u003d\"2\" color\u003d\"black\" face\u003d\"Times New Roman\"><span style\u003d\"font-size:10.0pt;color:windowtext\">Accomplishments\n     to date Bar</span></font><i><font size\u003d\"4\" color\u003d\"blue\"><span style\u003d\"font-size:14.0pt;color:blue;font-style:italic\">&nbsp; </span></font></i><font size\u003d\"2\" color\u003d\"black\"><span style\u003d\"font-size:10.0pt;color:windowtext\">change\n     this:</span></font><i><font size\u003d\"4\" color\u003d\"blue\"><span style\u003d\"font-size:14.0pt;color:blue;font-style:italic\">",1]  );    //-->
+    <a href="http://Amazon.com" target="_blank" onclick="return top.js.OpenExtLink(window,event,this)">Amazon.com</a>,       
+	First and Goal/Qwest Field, Expeditors International, the Experience Music 
+	Project, PopCap Games, Stoel Rives LLC, Wong       Doody, Coughlin Porter Lundeen, Helsell Fetterman and many others.</p>
+	<div id="h4a">Community Services</div>
+		<p>Collectively, our program has unique 360° impact in the community.  Through YouthForce teens gain valuable career experience and mentored relationships while earning money for family needs and college; employers enjoy the       benefits of having motivated, enthusiastic teens working in administrative       support positions while receiving the goodwill associated with giving back       to the community; schools gain internships that help students apply their learning; foundations impact the success and diversity of our communities&#8217; leaders of tomorrow, and YouthForce earned income supports program development and sustainability.   </p>
+	<div id="h4a">Management Team</div>
+
+		<p>YouthForce is operated by an experienced   team with more than 25 years collective experience in youth employment,   youth development, and with new enterprise start-ups.&nbsp; &nbsp;</p>
+  	    <p style="margin-bottom: 0"><b>2007 Board of Directors:</b></p>
+<blockquote>
+  <p><b>Tom Anderson</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CFO Apariant, Past Chair WA Staffing Assoc.</p>
+	  <p style="margin-top: 0"><b>Eve Crevoshay </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Facing History, Fund Developer</p>
+
+	  <p style="margin-bottom: 0"><strong> Vipin Duggal&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong>Attenex Corp, Strategic Account Manager </p>
+	  <p><b>Sara Hasan</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; McAdams, Wright, Ragen, Equity Analyst</p>
+	  <p style="margin-top: 0; margin-bottom: 0"><b>Edward Lee</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Key Bank, Corporate Banking (Vice Chair)</p>
+	  <p><b>Tammy Young&nbsp;&nbsp;&nbsp;&nbsp;
+
+		</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Moss Adams, Human 
+	  Resources Director </p>
+    </blockquote>
+	<p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
+		<p>For more information, please contact us at 206.344.3310 or email at <a href="mailto:Jeffrey@youthforce.com" target="_blank">Jeffrey@youthforce.com</a> </p>
+		<h3>&nbsp;</h3>
+  	    <h3><a href="post.html">Interested In Our Work? Hire A Teen!</a></h3>
+
+  </div></p>
